--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     
 <head>
-        <title>HOT LAND | RESTAURANT</title>
+        <title>FOOD WALLY | Grills | RESTAURANT</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <!-- Favicons -->
