icon logo added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <!-- Favicons -->
-        <link href="hlimg/logo.JPG" rel="icon">
+        <link href="hlimg/Logohl2.JPG" rel="icon">
 <!--        <link href="img/apple-touch-icon.png" rel="apple-touch-icon">-->
 
         <!-- Google Fonts -->
