--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <!-- Favicons -->
-        <link href="hlimg/Logohl2.JPG" rel="icon">
+        <link href="hlimg/fwlogo.PNG" rel="icon">
 <!--        <link href="img/apple-touch-icon.png" rel="apple-touch-icon">-->
 
         <!-- Google Fonts -->
@@ -51,7 +51,7 @@
       <span>F</span>
       <span>O</span>
       <span>O</span>
-      <span>D</span>
+      <span>D</span>&nbsp;
       <span>W</span>
       <span>A</span>
       <span>L</span>
@@ -174,7 +174,7 @@
           <div class="col-lg-7 col-md-6">
             <div class="about-content">
               <h2>About Us</h2>
-              <p>Craving some delicious food? Maybe you’re in the mood for a juicy? No matter what kind of meal you have in mind, The FoodWally Grills & Restaurant is ready to prepare it for you.</p>
+              <p>Craving some delicious food? Maybe you’re in the mood for a juicy? No matter what kind of meal you have in mind, The Food Wally Grills & Restaurant is ready to prepare it for you.</p>
 
                 
               <p>Hours 6:00 AM - 11:30 PM</p>
