--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
             <div class="col-md-4">
                 <div class="col-md-12">
                     <div class="social-links text-center">
-                    <a href="https://twitter.com/login" class="twitter"><i class="fa fa-twitter"></i></a>
+                    <a href="https://twitter.com/login" class="twitter" target="click"><i class="fa fa-twitter"></i></a>
                     <a href="https://www.facebook.com/Foodwally-GrillRestaurant-103978524636431/" class="facebook" target="click"><i class="fa fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/foodwally/" class="instagram"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/foodwally/" class="instagram" target="click"><i class="fa fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/" class="linkedin" target="click"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
